# angel-nail-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SCOPE_FOR_ESTIMATION.html  SCOPE_FOR_ESTIMATION.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
docs/: dynamic_image_style_guide.md  server_deploy.md
scripts/: backup_prod.sh  calendar_smoke_test.py  check_google_access.py  check_sqlite_migration.py  google_smoke_test.py  init_drive_oauth.py  restore_prod.sh  seed.py  sync_template_defaults.py
src/: __init__.py  config.py  logger.py  main.py  scheduler.py
tests/: conftest.py  test_admin_all_bookings.py  test_admin_approvals_inline_navigation.py  test_admin_button_edit.py  test_admin_clients.py  test_admin_custom_emoji.py  test_admin_manual_booking.py  test_admin_master_windows.py  test_admin_menu.py  test_admin_phase7.py  test_admin_proxy_chat.py  test_admin_rich_test.py  test_admin_schedule.py  test_admin_schedule_month.py  test_admin_schedule_move.py  test_admin_schedule_service.py  test_admin_templates_edit.py  test_aftercare.py  test_anti_abuse.py  test_approvals.py  test_booking_flow.py  test_booking_preferences.py  test_bot_commands.py  test_brand_template_media.py  test_calendar_pull.py  test_calendar_sync.py  test_callback_transition_audit.py  test_client_booking_price_intro.py  test_client_copy_style.py  test_client_inline_navigation.py  test_client_offer_confirm.py  test_day_picker_ordering.py  test_direct_booking_service.py  test_fallback.py  test_force_majeure.py  (+23 more)
(+126 files in other folders)
