[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "angels-nails-bot"
version = "0.1.0"
description = "Telegram bot for ANGELS NAIL SPACE."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.30.0,<4.0",
  "aiosqlite>=0.20,<1.0",
  "alembic>=1.13,<2.0",
  "apscheduler>=3.10,<4.0",
  "greenlet>=3.0,<4.0",
  "google-api-python-client>=2.0,<3.0",
  "google-auth>=2.0,<3.0",
  "google-auth-oauthlib>=1.2,<2.0",
  "Pillow>=10.0,<12.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0,<25.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.4,<1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "ASYNC",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
